[gd_scene load_steps=16 format=3 uid="uid://bgtnl1hwmny64"]

[ext_resource type="Script" path="res://scripts/misc/player.gd" id="1_nquv5"]
[ext_resource type="Texture2D" uid="uid://byvk6lr3ippcy" path="res://assets/light.png" id="2_2w58b"]
[ext_resource type="Texture2D" uid="uid://cmcfv0icn068b" path="res://assets/art/character/091-3.png" id="2_4dybd"]
[ext_resource type="Texture2D" uid="uid://ydb3f0p3cdq0" path="res://assets/art/position-marker.svg" id="2_86mcy"]
[ext_resource type="PackedScene" uid="uid://bbou7hvela1cg" path="res://entities/weapons/tool.tscn" id="2_guve7"]
[ext_resource type="Material" uid="uid://ddwxi6uxhq3g5" path="res://scripts/shaders/hop.tres" id="2_p3dkk"]
[ext_resource type="Texture2D" uid="uid://r665h1vjcxqa" path="res://assets/light-iso.png" id="3_22jw8"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5rsor"]
radius = 9.0
height = 29.0

[sub_resource type="Gradient" id="Gradient_pe570"]
offsets = PackedFloat32Array(0, 0.501961, 1)
colors = PackedColorArray(1, 1, 1, 1, 0.341176, 0.341176, 0.341176, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ps2w7"]
gradient = SubResource("Gradient_pe570")
width = 512
height = 512
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.75641, 0.230769)

[sub_resource type="CircleShape2D" id="CircleShape2D_ifrs4"]
radius = 100.0

[sub_resource type="Gradient" id="Gradient_bqfhm"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_h4rba"]
gradient = SubResource("Gradient_bqfhm")
width = 40
height = 2

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_oyfv5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1xxo2"]

[node name="Player" type="CharacterBody2D"]
z_index = 1
y_sort_enabled = true
collision_mask = 16
script = ExtResource("1_nquv5")
aggro_radius = 250.0
aggro_shoot_radius = 400.0
camera = "camera_drag"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(1.5, 1.5)
shape = SubResource("CapsuleShape2D_5rsor")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.75, 1.75)
limit_left = -96000
limit_top = -96000
limit_right = 96000
limit_bottom = 96000
position_smoothing_speed = 10.0

[node name="Sprite2D" type="Sprite2D" parent="."]
material = ExtResource("2_p3dkk")
position = Vector2(0, -5)
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_4dybd")
offset = Vector2(0, 20)

[node name="Shadow" type="Sprite2D" parent="Sprite2D"]
modulate = Color(0, 0, 0, 0.270588)
show_behind_parent = true
position = Vector2(0, 83.3333)
scale = Vector2(0.333333, 0.166667)
texture = ExtResource("2_2w58b")

[node name="Tool" parent="." instance=ExtResource("2_guve7")]

[node name="ShadowCaster" type="PointLight2D" parent="."]
shadow_enabled = true
texture = ExtResource("3_22jw8")

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(10, -20)
scale = Vector2(1, 0.6)
color = Color(0.784314, 1, 1, 1)
texture = SubResource("GradientTexture2D_ps2w7")

[node name="PickupRadius" type="Area2D" parent="."]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupRadius"]
shape = SubResource("CircleShape2D_ifrs4")

[node name="Invuln" type="Timer" parent="."]
one_shot = true

[node name="Noise" type="Timer" parent="."]
one_shot = true

[node name="Boss" type="Timer" parent="."]
wait_time = 180.0
one_shot = true
autostart = true

[node name="TextureProgressBar" type="TextureProgressBar" parent="."]
z_index = 1
custom_minimum_size = Vector2(20, 2)
offset_left = -20.0
offset_top = -28.0
offset_right = 20.0
offset_bottom = -26.0
texture_progress = SubResource("GradientTexture2D_h4rba")

[node name="Hurtbox" type="Area2D" parent="."]
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
scale = Vector2(1.5, 1.5)
shape = SubResource("CapsuleShape2D_oyfv5")

[node name="AggroRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="AggroRange"]
scale = Vector2(1, 0.6)
shape = SubResource("CircleShape2D_1xxo2")

[node name="Marker" type="Sprite2D" parent="."]
unique_name_in_owner = true
z_index = -1
scale = Vector2(0.05, 0.05)
texture = ExtResource("2_86mcy")
offset = Vector2(0, -256)

[connection signal="timeout" from="Boss" to="." method="_on_boss_timeout"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="body_entered" from="AggroRange" to="." method="_on_aggro_range_body_entered"]
